--- a/5. Dualite.tex
+++ b/5. Dualite.tex
@@ -483,7 +483,7 @@ r_D^T &=
 \begin{frame}
 \frametitle{Exemple}
 
-Il a des coûts réduits strictement négatifs, aussi on doit continuer. On choisit ici le premier coût, autrement dit on fait entrée $x_2$, lequel est associé à
+Il a des coûts réduits strictement négatifs, aussi on doit continuer. On choisit ici le premier coût, autrement dit on fait entrer $x_2$, lequel est associé à
 \[
 y_2 = B^{-1}a_2 =
 \begin{pmatrix}
@@ -722,7 +722,7 @@ En résolvant ce problème (avec par exemple une méthode à deux phases), nous 
 \[
 y^* =
 \begin{pmatrix}
-1 & 1 & 0 & 0 & 0 & 0
+1 & 1 & 3 & 0 & 2 & 0
 \end{pmatrix}
 \]
 pour la valeur optimale 9.
