--- a/8. Points Interieurs.tex
+++ b/8. Points Interieurs.tex
@@ -103,7 +103,7 @@ Soit $\mu \geq 0$. Problème barrière (PB):
 \end{frame}
 
 \begin{frame}
-\frametitle{Prbolème barrière vs Problème linéaire}
+\frametitle{Problème barrière vs Problème linéaire}
 
 Si $\mu = 0$, on retrouve le problème original en permettant à $x$ d'avoir des composantes nulles:
 \begin{align*}
@@ -617,7 +617,7 @@ Dès lors,
 \end{frame}
 
 \begin{frame}
-\frametitle{Chemin dual central: conditions d'optimlaité}
+\frametitle{Chemin dual central: conditions d'optimalité}
 
 On obtient les conditions d'optimalité
 \begin{align*}
