--- a/macros.tex
+++ b/macros.tex
@@ -1,8 +1,11 @@
 % We add the following commonly used macros:
 
+% Note: \bsc is already in babel-french; the macros below override it
+
 % vectors as boldsymbols:
 \newcommand{\bsa}{{\boldsymbol{a}}}
 \newcommand{\bsb}{{\boldsymbol{b}}}
+\providecommand{\bsc}{} % if \bsc is not defined, define it
 \renewcommand{\bsc}{{\boldsymbol{c}}}
 \newcommand{\bsd}{{\boldsymbol{d}}}
 \newcommand{\bse}{{\boldsymbol{e}}}
