--- a/7. PI - Introduction.tex
+++ b/7. PI - Introduction.tex
@@ -802,7 +802,7 @@ $$
 \begin{frame}
 \frametitle{Initialisation}
 
-Voir Vanderbei, Chapitre 21, Section 5.
+Une méthode de phase I peut également être développée pour trouver un point réalisable sans nécessairement qu'il soit solution de base. Voir Vanderbei, Chapitre 21, Section 5.
 \end{frame}
 
 \end{document}
