--- a/0. Intro.tex
+++ b/0. Intro.tex
@@ -90,7 +90,7 @@ Aspects numériques de la PL (utilisation de Julia).
 
 \mbox{}
 
-Démonstrateur: Jean Laprés-Chartrand (\url{jl_chartrand@hotmail.com})\\
+Démonstrateur: Pierre Borie <\url{pierre.borie@umontreal.ca}>
 
 \mbox{}
 
@@ -100,7 +100,7 @@ Notebooks: \url{https://github.com/fbastin/optim};
 \item
 Slides: \url{https://github.com/fbastin/LP_Introduction};
 \item
-Canal discord: \url{https://discord.gg/huAsyTeADW}.
+Canal discord: \url{https://discord.gg/KSjzR2ht4f}.
 \end{itemize}
 
 \end{frame}
