--- a/0. Intro.tex
+++ b/0. Intro.tex
@@ -139,7 +139,7 @@ a_{11}x_1 + a_{12}x_2 + \ldots + a_{1n}x_n = b_1 \\
 
 \begin{align*}
 & a_{j1}x_1 + a_{j2}x_2 + \ldots + a_{jn}x_n \leq b_j \\
-\rightarrow & a_{j1}x_1 + a_{j2}x_2 + \ldots + a_{jn}x_n + s_j = b_j \end{align*}
+\rightarrow & a_{j1}x_1 + a_{j2}x_2 + \ldots + a_{jn}x_n + s_j = b_j, \quad s_j \geq 0 \end{align*}
 
 \mbox{}
 
@@ -147,7 +147,7 @@ a_{11}x_1 + a_{12}x_2 + \ldots + a_{1n}x_n = b_1 \\
 
 \begin{align*}
 & a_{j1}x_1 + a_{j2}x_2 + \ldots + a_{jn}x_n \geq b_j \\
-\rightarrow & a_{j1}x_1 + a_{j2}x_2 + \ldots + a_{jn}x_n - u_j = b_j \end{align*}
+\rightarrow & a_{j1}x_1 + a_{j2}x_2 + \ldots + a_{jn}x_n - u_j = b_j, \quad u_j \geq 0 \end{align*}
 
 \end{frame}
 
