--- a/7. PI - Introduction.tex
+++ b/7. PI - Introduction.tex
@@ -223,7 +223,7 @@ Klee et Minty (1960s).
 Khachiyan (1979): premier algorithm en temps polynomial pour la programmation linéaire.
 %first polynomial-time algorithm for LP based on the ellipsoid method of Nemirovski and Yudin (1976). Theoretically strong but computationally weak.
 \item
-Karmarkar (1984): premier algorithme en temp polynomial pour la programmation linéaire.
+Karmarkar (1984): premier algorithme en temps polynomial pour la programmation linéaire.
 %first interior-point polynomial-time algorithm for LP.
 \item 
 Renegar (1988): algorithme de points intérieurs pour la programmation linéaire basé sur Newton. Meilleure complexité théorique connue à ce jour.
